# order-book-simulator

./: .gitignore  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: benchmark.yml  benchmarks.yml  format.yml  test.yml  version.yml
benchmarks/: __init__.py  matching_engine_benchmark.py  order_book_benchmark.py  run_all.py
benchmarks/integration/: __init__.py  integration_benchmark.py
benchmarks/unit/: __init__.py  delta_payload_benchmark.py  matching_engine_benchmark.py  multicast_benchmark.py  order_book_benchmark.py  run_all.py  run_all_benchmarks.py  websocket_benchmark.py
docker/: Dockerfile.gateway  Dockerfile.market_data  Dockerfile.matching  Dockerfile.postgresql  Dockerfile.streamlit  docker-compose.yml
examples/: market_simulator_usage.py  simulator_usage.py
resources/: nasdaq_stocks_2025_02_11.csv
src/order_book_simulator/: __init__.py
src/order_book_simulator/common/: cache.py  models.py
src/order_book_simulator/database/: connection.py  db_models.py  get_stocks.py  init_test_data.sql  models.py  queries.py  schema.sql  session.py
src/order_book_simulator/gateway/: app.py  app_state.py  producer.py  validation.py  ws_manager.py
src/order_book_simulator/gateway/routers/: health.py  health_router.py  market_data.py  market_data_router.py  order_book_router.py  orders.py  ws_router.py
src/order_book_simulator/market_data/: analytics.py  db_consumer.py  models.py  persistence.py  processor.py  publisher.py
src/order_book_simulator/matching/: consumer.py  delta_buffer.py  engine.py  matching_engine.py  order_book.py  order_consumer.py
src/order_book_simulator/multicast/: multicast_publisher.py  multicast_subscriber.py  publisher.py  wire_format.py
src/order_book_simulator/simulator/: market_simulator.py  market_simulator_stats.py  random_order_generator.py
src/order_book_simulator/ui/: streamlit_app.py
src/order_book_simulator/ui/components/: api_client.py  market_overview.py  order_book.py  order_form.py  trade_history.py  utils.py
tests/: conftest.py
tests/test_common/: test_cache_deltas.py
tests/test_gateway/: test_api.py  test_health.py  test_market_data.py  test_market_data_router.py  test_order_book_router.py  test_order_book_router_deltas.py  test_ws_manager.py  test_ws_router.py
tests/test_market_data/: test_analytics.py  test_db_consumer.py
tests/test_matching/: test_delta_buffer.py  test_engine.py  test_matching_engine.py  test_matching_engine_deltas.py  test_order_book.py  test_order_book_deltas.py  test_order_consumer.py
tests/test_multicast/: test_multicast_publisher.py  test_multicast_subscriber.py  test_publisher.py  test_wire_format.py
