[project]
description = "An order matching engine and market data system built in Python, designed to simulate real-world exchange trading mechanics. Processes limit orders with price-time priority, executes trades, and provides market data updates in real-time."
name = "order-book-simulator"
version = "0.10.1"
readme = "README.md"
authors = [
    { name = "Isaac Cheng", email = "47993930+IsaacCheng9@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.12",
    "aiokafka>=0.12.0",
    "asyncio>=3.4.3",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.7",
    "greenlet>=3.1.1",
    "pydantic>=2.10.6",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.37",
    "uvicorn>=0.34.0",
    "uvloop>=0.21.0",
]

[project.scripts]
order-simulator = "order_book_simulator.simulator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.6.10",
    "httpx>=0.28.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "typing-extensions>=4.12.2",
]

[tool.commitizen]
version = "0.10.1"
version_files = [
    "pyproject.toml:version",
    "pyproject.toml:tool.commitizen.version",
]

[tool.hatch.build.targets.wheel]
packages = ["src/order_book_simulator"]
