[project]
description = "An order matching engine and market data system built in Python, designed to simulate real-world exchange trading mechanics. Processes limit orders with price-time priority, executes trades, and provides market data updates in real-time."
name = "order-book-simulator"
version = "0.17.0"
readme = "README.md"
authors = [
    { name = "Isaac Cheng", email = "47993930+IsaacCheng9@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.12",
    "aiokafka>=0.12.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.7",
    "greenlet>=3.1.1",
    "polars>=1.22.0",
    "pydantic>=2.10.6",
    "redis>=5.2.1",
    "sortedcontainers>=2.4.0",
    "sqlalchemy>=2.0.37",
    "streamlit>=1.46.1",
    "uvicorn>=0.34.0",
    "uvloop>=0.21.0",
    "watchdog>=6.0.0",
]

[project.scripts]
order-simulator = "order_book_simulator.simulator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.6.10",
    "httpx>=0.28.1",
    "pyright>=1.1.404",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.12.8",
    "sortedcontainers-stubs>=2.4.3",
    "typing-extensions>=4.12.2",
]

[tool.coverage.run]
source = ["src/order_book_simulator"]
omit = ["tests/*", "**/conftest.py"]

[tool.commitizen]
version = "0.17.0"
version_files = [
    "pyproject.toml:version",
    "pyproject.toml:tool.commitizen.version",
]

[tool.hatch.build.targets.wheel]
packages = ["src/order_book_simulator"]
